<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/listview"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />    
    
    <item
        android:id="@+id/camera"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    
     <item
        android:id="@+id/home"
        android:title="@string/home"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    
</menu>